# repo-health-tracker

./: .env.example  .gitignore  AGENTS.md  README.md  label_taxonomy.json  pyproject.toml  report_prompt.md
scripts/: compute_repo_health.py  generate_cleanup_proposal.py  generate_routstr_report.py
src/repo_health/: __init__.py  __main__.py  generate.py
src/repo_health/cli/: __init__.py  fetch.py  generate.py  report.py  score.py  summary.py
src/repo_health/config/: __init__.py  settings.py
src/repo_health/data/: __init__.py  fetcher.py  normalizer.py
src/repo_health/engine/: __init__.py  final_reporter.py  metrics.py  reporter.py  scorer.py
src/repo_health/utils/: __init__.py  helpers.py
tests/: __init__.py  conftest.py
tests/test_data/: test_fetcher.py
tests/test_engine/: test_metrics.py
